Bug fixes and kill/tp interceptor